fix: header spacing on mobile

--- a/src/components/_sections/Banner/Banner.module.scss
+++ b/src/components/_sections/Banner/Banner.module.scss
@@ -84,7 +84,7 @@
 
 @include respond(small) {
   .Banner {
-    padding-top: 120px;
+    padding-top: 73px;
 
     h1 {
       font-size: var(--font-size-xxl);
